tests/references/ill-typed/not-a-reference-2.stella
language core;

extend with #references, #let-bindings;

fn main(n : Nat) -> Nat {
  return let ref = new(0) in **ref
}
